--- a/style.css
+++ b/style.css
@@ -3,22 +3,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@300;400;500;600&display=swap');
 
 *{
-  margin: 0;
-  padding: 0;  
+    margin: 0;
+    padding: 0; 
+    box-sizing: border-box; 
 }
 
-body {
+body 
+{
     font-family: "Poppins", sans-serif;
 }
 
-html {
+html 
+{
     scroll-behavior: smooth;
 }
 
 p {
     color: rgb(85, 85, 85)
 }
-
+  
 /* TRANSITION */
 
 a, 
@@ -356,6 +359,26 @@ article .icon {
 .education-icon {
     height: 2.5rem;
 }
+
+/* TIMELINE SECTION */
+
+ .timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto; 
+}
+
+  .timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: black;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+  }
+
 
 /* PROJECTS SECTION */
 
