Timeline draft from scratch.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 body 
 {
+    background-color: white;
     font-family: "Poppins", sans-serif;
 }
 
@@ -362,23 +363,9 @@ article .icon {
 
 /* TIMELINE SECTION */
 
- .timeline {
+#timeline {
     position: relative;
-    max-width: 1200px;
-    margin: 0 auto; 
 }
-
-  .timeline::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: black;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
-  }
-
 
 /* PROJECTS SECTION */
 
